doc/Lang.bnf
# BNF of LANG
# A program in LANG is <expression> where:

<expression> ::= <group> | [ <unar> ] <operand> [ <tail> ] { <binar><expression> }

<group> ::= \{ <expression> { ;<expression> } \}

<tail> ::= <indexator><tail> | <args><tail> |

<indexator> ::= \[ <expression> \]

<args> ::= ( [ <expression> {, <expression> } ] )

<operand> ::= ( <expression> ) | <if_expression> | <while_expression> | <literal> | <lambda>

<literal> ::= <string> | <int> | <float> | <variable> | loc <variable>

<lambda> ::= <params> => <expression>

<params> ::= \[ [ <parameter> { , <parameter> } ] \]

<parameter> ::= [ & ] <variable>

<if_expression> ::= if ( <expression> ) <expression> [ or <expression> ]

<while_expression> ::= as ( <expression> ) <expression>

<unar> ::= - | ! | $

<binar> ::= + | - | * | / | % | > | < | ~ | & | \| | = | -> | : | .

<variable> ::= -//-

<int> ::= -//-

<float> ::= -//-

<string> ::= -//-
